# DumpELF

./: .gitignore  .vimspector.json  CMakeLists.txt  DumpElf  cmake_install.cmake  compile_commands.json  dump.c  dump.h  elf_build.c  elf_build.h  errors.h  log.h  main  main.c
debug_dump/: 7f6197a6e000-7f6197a72000__Unknow  7f6197aaf000-7f6197ab2000__Unknow  7f6197ab9000-7f6197aba000__main  7f6197aba000-7f6197abb000__main  7f6197abb000-7f6197abc000__main  7f6197abc000-7f6197abd000__main  7f6197abd000-7f6197abe000__main  7fffdf068000-7fffdf089000__[heap]  main_dump_bak  mem_info.txt
